# ZKAPAuthorizer

./: .coveragerc  .coveralls.yml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  ARCH  CONTRIBUTING  CONTRIBUTING.rst  MANIFEST.in  NOTES  README.rst  attrs.nix  autobahn.nix  code_of_conduct.md  code_of_conduct.rst  codecov.yml  cryptography.nix  default.nix  eliot.nix  end-to-end.nix  flake.nix  hypothesis.nix  new.nix  nixpkgs.nix  overlays.nix  privacypass-repo.nix  privacypass.nix  pyproject.toml  pytest.nix  python-challenge-bypass-ristretto-repo.nix  python-challenge-bypass-ristretto.nix  remove-setuptools-scm.patch  requirements-tests.in  requirements-tests.txt  requirements.in  requirements.txt  ristretto.nix  secure-access-token-authorizer.nix  setup.cfg  (+8 more)
.circleci/: config.yml  convert-slipcover-data  finish-coverage-report  lib.sh  mergelcov.py  report-coverage.sh  requirements-doc.txt  slipcover-tests  slipcover2coveralls.py  slipcover2lcov.py  upload-to-coveralls
.github/workflows/: ci.yaml
docs/: requirements.txt
docs/source/: backup.rst  code_of_conduct.rst  conf.py  configuration.rst  index.rst  interface.rst  leases.rst
docs/source/designs/: backup-recovery.rst  backup-recovery.yaml  costs.rst
end-to-end/: default.nix  lib.nix  test_replication_recovery.py
end-to-end/tahoe-lafs/: default.nix  utils.nix
nix/: collections-extended.nix  compose.nix  eliot.nix  flake8-black.nix  flake8-isort.nix  hypothesis.nix  lib.nix  magic-wormhole-mailbox-server.nix  magic-wormhole-transit-relay.nix  mypy-zope.nix  pycddl.nix  python-challenge-bypass-ristretto.nix  repo-1_16_0_rc1.nix  setup.cfg.patch  sh.nix  sources.json  tahoe-capabilities.nix  tahoe-lafs-1.15.nix  tahoe-lafs-1_16.nix  tahoe-lafs.nix  tahoe-versions.nix  twine.nix  twisted.nix  types-pyyaml.nix
requirements/: base-1.16.txt  base.in  base.txt  debug.in  elpy.in  lint.in  test.in  test.txt  typecheck.in
scripts/: pin-requirements
src/_secureaccesstokenauthorizer/: __init__.py  _base64.py  _plugin.py  _storage_client.py  _storage_server.py  api.py  controller.py  model.py  resource.py
src/_secureaccesstokenauthorizer/tests/: __init__.py  matchers.py  strategies.py  test_base64.py  test_client_resource.py  test_matchers.py  test_model.py  test_plugin.py  test_storage_protocol.py  test_tokens.py
src/_zkapauthorizer/: __init__.py  _attrs_zope.py  _base64.py  _json.py  _plugin.py  _sql.py  _stack.py  _storage_client.py  _storage_server.py  _types.py  _version.py  api.py  backup-recovery.yaml  config.py  configutil.py  control.py  controller.py  eliot.py  foolscap.py  lease_maintenance.py  model.py  pricecalculator.py  private.py  recover.py  replicate.py  resource.py  schema.py  spending.py  sql.py  storage_common.py  tahoe.py  validators.py
src/_zkapauthorizer/server/: __init__.py  spending.py
src/_zkapauthorizer/tests/: __init__.py  _exception.py  _float_matchers.py  _sql_matchers.py  common.py  eliot.py  fixtures.py  foolscap.py  issuer.py  json.py  matchers.py  privacypass.py  resources.py  sql.py  storage_common.py  strategies.py  test_base64.py  test_client_resource.py  test_controller.py  test_eliot.py  test_foolscap.py  test_lease_maintenance.py  test_matchers.py  test_model.py  test_plugin.py  test_pricecalculator.py  test_private.py  test_recover.py  test_replicate.py  test_schema.py  test_spending.py  test_sql.py  test_storage_client.py  test_storage_protocol.py  test_storage_server.py  test_strategies.py  test_tahoe.py  test_tahoe_lafs_integration.py  testing-signing.key
src/twisted/plugins/: secureaccesstokenauthorizer.py  zkapauthorizer.py
