[build-system]
requires = ["setuptools", "wheel", "six"]
build-backend = "setuptools.build_meta"

[tool.towncrier]
    package = "_zkapauthorizer"
    package_dir = "src"
    filename = "ChangeLog.rst"

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Improved Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Deprecations and Removals"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Misc"
        showcontent = false

[tool.black]
target-version = ['py39']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/src/_zkapauthorizer/_version.py
'''

[tool.isort]
profile = "black"
skip = ["src/_zkapauthorizer/_version.py"]

[tool.mypy]
namespace_packages = true
plugins = "mypy_zope:plugin"
ignore_missing_imports = true
